add: レプリケーション

--- a/030_基礎.md
+++ b/030_基礎.md
@@ -38,5 +38,14 @@ Redisはトランザクションログ肥大化防止のためにバックグラ
 デフォルトではRedisは2秒間隔でデータをファイルシステムに書き込むようになっている。
 
 ## レプリケーション
+
+マスタースレーブ型のレプリケーションをサポート
+複数台のスレーブにレプリケーションすることができる
+スレーブはまた別のスレーブのマスターとなれる
+シングルルートレプリケーションをサポートする。
+→ 他にどんなレプリケーション手法があるのか？
+Redisのスレーブには書き込みを許可する設定も可能で、その場合、インスタンス間の不整合を許容する形になる。
+RedisはPub-Sub型モデルを完全に実装しており、マスターでPublish異種されたメッセージはスレーブに接続してSubscribeしているクライアントにも到達する・レプリケーションは。読み込みのスケーラビリティとデータの冗長性向上に有効である。
+
 ## 性能
 ## クラスタリング
