add: クラスタリング

--- a/docs/030_基礎.md
+++ b/docs/030_基礎.md
@@ -48,4 +48,20 @@ Redisのスレーブには書き込みを許可する設定も可能で、その
 RedisはPub-Sub型モデルを完全に実装しており、マスターでPublish異種されたメッセージはスレーブに接続してSubscribeしているクライアントにも到達する・レプリケーションは。読み込みのスケーラビリティとデータの冗長性向上に有効である。
 
 ## 性能
+データの永続性が必要ない場合において、ディスクIOがあるDBと比べて優位。
+Redisの操作はシングルスレッド上のシングルプロセスとして動作する。
+そのため、1つのRedisインスタンスでは、例えばストアドプロシージャのように並列処理の実行は不可
+
+→ いまいちしっくり来ない説明
+
 ## クラスタリング
+Redisプロジェクトはクラスター仕様を持っており、キー空間の自動パーティショニングとホットリシャーディングをサポート。
+ただし、シングルキー操作のみに対応らしい。
+
+
+
+## 用語
+
+|名前|説明|
+|----|----|
+|シャーディング|複数のサーバを使用して単一の論理データベースを構成する手法|
