--- a/docs/101_スケーリング.md
+++ b/docs/101_スケーリング.md
@@ -18,3 +18,13 @@
 ダウンタイムなしでスケール可能。
 スケーリングや再分散が処理中でもリクエストに継続対応が可能。
 スケールアウト/スケールイン/再分散(キースペースを等分に移動)
+
+シャードのキースペースの個別指定は不可
+リシャーディングはオペレーションコストがそれなりにかかるので、オフピーク時に実施すべき
+
+## オンラインスケールアップ
+Redis クラスターは最小限のダウンタイムでリクエストを処理し続ける
+
+## オンラインスケールダウン
+Redis クラスターは最小限のダウンタイムでリクエストを処理し続けます。
+
